unpackaged/objects/AccountSales__c.object
<CustomObject>
  <description>Contains periodized sales data (quantity and currency) for each account aggregated by SBU, product group 4 and brand. All records are updated daily from ERP via integration.</description>
  <fields>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Sales</relationshipLabel>
    <relationshipName>AccountSales</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>64</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup1_Desc__c</fullName>
    <label>Product Group 1 Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup1__c</fullName>
    <formula>LEFT(ProductGroup4__c, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 1</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup2_Desc__c</fullName>
    <label>Product Group 2 Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup2__c</fullName>
    <formula>LEFT(ProductGroup4__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 2</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup3_Desc__c</fullName>
    <label>Product Group 3 Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductGroup3__c</fullName>
    <formula>LEFT(ProductGroup4__c, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group 3</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quantity_CM_1__c</fullName>
    <label>Quantity Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CM_2__c</fullName>
    <label>Quantity Current Month - 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CM_3__c</fullName>
    <label>Quantity Current Month - 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CM__c</fullName>
    <label>Quantity Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CQ_1__c</fullName>
    <label>Quantity Last Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CQ_2__c</fullName>
    <label>Quantity Current Quarter - 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CQ_3__c</fullName>
    <label>Quantity Current Quarter - 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CQ__c</fullName>
    <label>Quantity Current Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_1TD__c</fullName>
    <label>Quantity Last Year To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_1__c</fullName>
    <label>Quantity Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_2TD__c</fullName>
    <label>Quantity Current Year - 2 To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_2__c</fullName>
    <label>Quantity Current Year - 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_3TD__c</fullName>
    <label>Quantity Current Year - 3 To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_3__c</fullName>
    <label>Quantity Current Year - 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY__c</fullName>
    <label>Quantity Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_L12M__c</fullName>
    <label>Quantity Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_L13_24M__c</fullName>
    <label>Quantity Last 13-24 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_L7D__c</fullName>
    <label>Quantity Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_Yesterday__c</fullName>
    <label>Quantity Yesterday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <formula>LEFT(ProductGroup4__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sales_CM_1__c</fullName>
    <label>Sales Last Month</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CM_2__c</fullName>
    <label>Sales Current Month - 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CM_3__c</fullName>
    <label>Sales Current Month - 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CM__c</fullName>
    <label>Sales Current Month</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CQ_1__c</fullName>
    <label>Sales Last Quarter</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CQ_2__c</fullName>
    <label>Sales Current Quarter - 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CQ_3__c</fullName>
    <label>Sales Current Quarter - 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CQ__c</fullName>
    <label>Sales Current Quarter</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY_1TD__c</fullName>
    <label>Sales Last Year To Date</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY_1__c</fullName>
    <label>Sales Last Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY_2TD__c</fullName>
    <label>Sales Current Year - 2 To Date</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY_2__c</fullName>
    <label>Sales Current Year - 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY_3TD__c</fullName>
    <label>Sales Current Year - 3 To Date</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY_3__c</fullName>
    <label>Sales Current Year - 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_CY__c</fullName>
    <label>Sales Current Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_L12M__c</fullName>
    <label>Sales Last 12 Months</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_L13_24M__c</fullName>
    <label>Sales Last 13-24 Months</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_L7D__c</fullName>
    <label>Sales Last 7 Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Yesterday__c</fullName>
    <label>Sales Yesterday</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Internal</fullName>
        </value>
        <value>
          <fullName>External</fullName>
        </value>
        <value>
          <fullName>Dealer</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Account Sales</label>
  <nameField>
    <label>Account Sales Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Account Sales</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>